--- a/Pagina jornalistica/index.html
+++ b/Pagina jornalistica/index.html
@@ -41,7 +41,7 @@
                         <ul id="lista-noticias">
                             <li>
                                 <a href="">
-                                    <img src="imagens/tecnologia.jpg" alt="Tecnologia">
+                                    <img src="imagens/Tecnologia.png" alt="Tecnologia">
                                     <h3>Novas Tecnologias</h3>
                                     <p>
                                         Lorem ipsum dolor sit amet amet amet...
@@ -51,7 +51,7 @@
 
                             <li>
                                 <a href="">
-                                    <img src="imagens/tecnologia.jpg" alt="Tecnologia">
+                                    <img src="imagens/Tecnologia.png" alt="Tecnologia">
                                     <h3>Novas Tecnologias</h3>
                                     <p>
                                         Lorem ipsum dolor sit amet amet amet...
@@ -61,7 +61,7 @@
 
                             <li>
                                 <a href="">
-                                    <img src="imagens/tecnologia.jpg" alt="Tecnologia">
+                                    <img src="imagens/Tecnologia.png" alt="Tecnologia">
                                     <h3>Novas Tecnologias</h3>
                                     <p>
                                         Lorem ipsum dolor sit amet amet amet...
@@ -71,7 +71,7 @@
 
                             <li>
                                 <a href="">
-                                    <img src="imagens/tecnologia.jpg" alt="Tecnologia">
+                                    <img src="imagens/Tecnologia.png" alt="Tecnologia">
                                     <h3>Novas Tecnologias</h3>
                                     <p>
                                         Lorem ipsum dolor sit amet amet amet...
@@ -79,9 +79,9 @@
                                 </a>
                             </li>
                         </ul>
-
                     </div>
                 </div>
+                
             </div>
             <div id="secundario">
                 <div class="caixa">
@@ -111,7 +111,7 @@
 
                             <li>
                                 <a href="">
-                                    <img src="imagens/tecnologia.jpg" alt="Tecnologia">
+                                    <img src="imagens/tecnologia.png" alt="Tecnologia">
                                     <h3>Novas Tecnologias</h3>
                                     <p>
                                         Lorem ipsum dolor sit amet amet amet...
@@ -121,7 +121,7 @@
 
                             <li>
                                 <a href="">
-                                    <img src="imagens/doutor.jpg" alt="Tecnologia">
+                                    <img src="imagens/cidade.jpg" alt="Tecnologia">
                                     <h3>Novas Tecnologias</h3>
                                     <p>
                                         Lorem ipsum dolor sit amet amet amet...
@@ -134,6 +134,22 @@
                 </div>
             </div>
             <aside id="lateral">
+                <div class="caixa">
+                    <h2>Entrevistas</h2>
+                    <nav class="caixa-conteudo">
+                        <ul>
+                            <li><a href="">José Almeida</a></li>
+                            <li><a href="">Felipe Silva</a></li>
+                            <li><a href="">Bruno Almeida</a></li>
+                            <li><a href="">Maria José</a></li>
+                            <li><a href="">André Carlos</a></li>
+                            <li><a href="">Antonieta Maria</a></li>
+                            <li><a href="">João Victor</a></li>
+                            <li><a href="">Fernando Weiss</a></li>
+                        </ul>
+                    </nav>
+                </div>
+
                 <div class="caixa">
                     <h2>News</h2>
                     <div class="caixa-conteudo">
